<resources>
    <string name="app_name">Referee Schedule GDS</string>
    <string name="legend_all_staffed">All staffed</string>
    <string name="legend_missing_ar">Missing Asst Ref</string>
    <string name="legend_missing_hr">Missing Head Ref</string>
    <string name="legend_in_progress_covered">In progress (covered)</string>
    <string name="legend_in_progress_need_asst">In progress (need Asst)</string>
    <string name="legend_in_progress_need_head">In progress (need Head)</string>
    <string name="printer_sync_code">PRINTER SYNC CODE</string>
    <string name="printer_sync_hint">Enter this code in your Referee App to print</string>
    <string name="assign_hr">Assign Head Ref</string>
    <string name="assign_ar">Assign Assistant Ref</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
</resources>