<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_org_selection">

    <fragment
        android:id="@+id/nav_org_selection"
        android:name="com.sports.gamedayschedular.ui.org.OrgSelectionFragment"
        android:label="Select Organization"
        tools:layout="@layout/fragment_org_selection">
        <action
            android:id="@+id/action_nav_org_selection_to_nav_transform"
            app:destination="@id/nav_transform"
            app:popUpTo="@id/nav_org_selection"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.sports.gamedayschedular.ui.transform.TransformFragment"
        android:label="Daily Schedule"
        tools:layout="@layout/fragment_transform">
        <action
            android:id="@+id/action_nav_transform_to_nav_referee_search"
            app:destination="@id/nav_referee_search" />
    </fragment>

    <fragment
        android:id="@+id/nav_referee_search"
        android:name="com.sports.gamedayschedular.ui.referee.RefereeSearchFragment"
        android:label="Find Referee"
        tools:layout="@layout/fragment_referee_search">
        <argument
            android:name="gameId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="position"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="isCheckIn"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.sports.gamedayschedular.ui.reflow.ReflowFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sports.gamedayschedular.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.sports.gamedayschedular.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>